Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Pattern Cutting Blog</title>
     </head>
     <body>
         <header>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Pattern Cutting Blog - Django Girls</a></h1>
         </header>
 
         <article>
-            <time>published: 14.06.2014, 12:14</time>
+            <time>published: 04.11.2021</time>
             <h2><a href="">My first post</a></h2>
             <p>Here we should have some interesting information about pattern cutting.</p>
+            <p><strong>First up - Polo Collar's.</strong></p>
+            <p><em>Press Here</em></p>
         </article>
 
+            
+
         <article>
-            <time>published: 14.06.2014, 12:14</time>
+            <time>published: 04.11.2021</time>
             <h2><a href="">My second post</a></h2>
             <p>This should be a follow up on the first post, but we need to make that one before we can make a second one</p>
         </article>
